# protocol_qc

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  conftest.py  pyproject.toml
docs/: README.md  building_a_template.md  example_template.json
docs/tutorial/: 00_datalad.md  00_submodule.md  01_firsttemplate.md  02_seriesdescription.md  03_checkparams.md  04_additional.md  README.md
docs/tutorial/sessions/: 001.md  002.md  003.md  004.md  005.md  006.md  007.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  015.md  101.md  102.md  103.md  104.md  105.md  106.md  107.md  108.md  109.md  110.md  111.md  112.md  README.md
docs/tutorial/templates/: 01_byseriesdescription.json  02_bymetadata.json  03_checkparams.json  04_additional.json
src/protocol_qc/: __init__.py  _version.py  build_templates.py  cli.py  generate_tags.py  match_statuses.py  protocol_qc.py  read_dicoms.py  read_templates.py  summary.py
src/protocol_qc/classes/: __init__.py  acquisition.py  dataseries.py  protocol.py  series.py
src/protocol_qc/utils/: cust_logging.py  formatting.py  parser.py
tests/: test_build_templates.py  test_classes.py  test_cust_logging.py  test_parser.py  test_read_dicoms.py  test_read_templates.py  test_summary.py
